--- a/Shooting_Game/Shooting_Game/Shooting_Game.vcxproj.filters
+++ b/Shooting_Game/Shooting_Game/Shooting_Game.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="function.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="console.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="console.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
