--- a/Shooting_Game/Shooting_Game/Shooting_Game.vcxproj
+++ b/Shooting_Game/Shooting_Game/Shooting_Game.vcxproj
@@ -113,7 +113,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="console.c" />
     <ClCompile Include="function.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="console.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
